# homefit

./: .gitignore  Makefile  README.md  ai-backend.md  ai-frontend.md  backend-mvp.md  docker-compose.llm.yml  docker-compose.yml  plan.md  research.md
ai-server/: .dockerignore  .env.example  Dockerfile  pyproject.toml
ai-server/app/: __init__.py  config.py  main.py  schemas.py
ai-server/app/services/: __init__.py  backend_client.py  chat_service.py  dialog_policy.py  llm_provider.py  merge_service.py  message_builder.py  result_formatter.py
ai-server/tests/: test_chat_api.py  test_chat_service.py  test_dialog_policy.py  test_llm_provider.py  test_merge_service.py  test_result_formatter.py
backend/: build.gradle
backend/src/main/resources/: application.yaml
docs/api/: API.md
docs/erd/: API.md  ERD.md  ERD2.md
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vitest.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: chat.ts  client.ts
frontend/src/components/chat/: ChatInput.tsx  ChatScreen.test.tsx  ChatScreen.tsx  MessageBubble.tsx  MessageList.tsx  QuickReplyChips.tsx
frontend/src/hooks/: useChat.ts
frontend/src/lib/: chipMapper.test.ts  chipMapper.ts  idFactory.ts  messageRenderer.ts  userInputParser.test.ts  userInputParser.ts
frontend/src/mocks/: MockChatServer.test.ts  MockChatServer.ts  chat.v0.json
frontend/src/styles/: index.css
frontend/src/test/: setup.ts
frontend/src/types/: chat.ts
(+13 files in other folders)
