[project]
name = "homefit-ai-server"
version = "0.1.0"
description = "Homefit AI orchestration server MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "httpx==0.28.1",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.1",
  "uvicorn[standard]==0.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.0",
  "ruff==0.8.4"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
